# ardi-skill

./: .gitignore  README.md  SKILL.md  pyproject.toml
contracts/: GAS_REPORT.md  README.md  SECURITY.md  foundry.toml  slither.config.json
contracts/deployments/: local.json
contracts/script/: Deploy.s.sol  DeployLocal.s.sol  DeployTestnet.s.sol  DeployTimelock.s.sol
contracts/src/: ArdiBondEscrow.sol  ArdiEpochDraw.sol  ArdiMintController.sol  ArdiNFT.sol  ArdiOTC.sol  ArdiToken.sol  ChainlinkVRFAdapter.sol  MockRandomness.sol
contracts/src/interfaces/: IArdiBondEscrow.sol  IArdiTokenMint.sol  ICoordinator.sol  IKYA.sol  IRandomnessSource.sol
contracts/test/: Adversary.t.sol  ArdiBondEscrow.t.sol  ArdiEpochDraw.t.sol  ArdiMintController.t.sol  ArdiNFT.t.sol  ArdiOTC.t.sol  ArdiToken.t.sol  ChainlinkVRFAdapter.t.sol  Invariants.t.sol  Mocks.sol  Timelock.t.sol
coordinator/: Dockerfile  README.md  config.example.toml  config.testnet.toml  docker-compose.yml  pyproject.toml
coordinator/scripts/: encrypt_vault.py
coordinator/src/coordinator/: __init__.py  api.py  awp_distribution.py  chain_writer.py  config.py  db.py  epoch.py  forge.py  fusion.py  indexer.py  key_provider.py  kya_bridge.py  main.py  merkle.py  metrics.py  middleware.py  secure_vault.py  settlement.py  settlement_worker.py  signer.py  vault.py
coordinator/tests/: test_fusion_validation.py  test_indexer.py  test_merkle.py  test_middleware.py  test_secure_vault.py  test_settlement.py  test_signer.py
docs/: AWP-INTEGRATION.md  RUNBOOK.md  aip-003-v3.md  deploy-sepolia.md  design-spec.md  fusion-rules-v2.md  havok-launch-plan-v2.md  kya_proposal.md  ops-vault-security.md  testnet-runbook.md
docs/ardinals/: app.js  index.html  styles.css
docs/ardinals/_legacy/: app.js  index.html
docs/monitoring/: prometheus-rules.yml
examples/: full_cycle.py
scripts/: FUSION_LLM_EVAL_REPORT.md  FUSION_STRESS_REPORT.md  FUSION_TRAVERSAL_REPORT.md  README.md  airdrop_day_1.json  airdrop_day_2.json  anvil_commit_reveal_e2e.py  anvil_commit_reveal_e2e.sh  anvil_e2e.py  anvil_e2e.sh  anvil_forge_e2e.py  anvil_forge_e2e.sh  anvil_settlement_e2e.py  anvil_settlement_e2e.sh  detect_false_friends.py  e2e_demo.py  false_friends_report.json  fund_agent_eth.py  fusion_demo.py  fusion_full_traversal.py  fusion_llm_eval_100.py  fusion_llm_eval_results.json  fusion_precheck.py  fusion_sample_100.json  fusion_sample_100.py  fusion_stress_21k.py  fusion_stress_results.json  fusion_traversal_results.json  perf_test.py  register_worknet.py  testnet_demo_b_mining.py  testnet_demo_c_settlement.py  testnet_settle_demo.py  wire_testnet_config.py
src/ardi_skill/: __init__.py  __main__.py  _legacy.py  actions.py  agent.py  forge.py  onboard.py  sdk.py  wallet.py
tests/: test_sdk.py
tools/: fix_riddle_lang_mismatch.py  load_test.py  mint_for_test.py  regen_native_riddles.py  vault_merkle.py
(+3 files in other folders)
