[project]
name = "ardi-coordinator"
version = "0.1.0"
description = "Off-chain Coordinator service for the Ardi WorkNet"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "web3>=7.6",
    "eth-account>=0.13",
    "eth-utils>=5.1",
    "anthropic>=0.42",
    "httpx>=0.27",
    "anyio>=4.6",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
]

[project.scripts]
ardi-coordinator = "coordinator.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coordinator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
